5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1859_2178.log
== SUBMITION (2019-06-26 14:27:59) 
-- CODE:
from numpy import*

a = array(eval(input("")))
acu = 0.0
for i in lange(sum(m)):
	for j in lange(sum(m)):
		if(i!=j):
			acu+= m[i][j]
print(round(acu, 2)
-- EXECUTION TIME:
0.85499
-- ERROR:
  File "/home/codebench/codes/1859/2178/main.py", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:28:09) 
-- CODE:
from numpy import*

m = array(eval(input("")))
acu = 0.0
for i in lange(sum(m)):
	for j in lange(sum(m)):
		if(i!=j):
			acu+= m[i][j]
print(round(acu, 2)
-- EXECUTION TIME:
0.7433
-- ERROR:
  File "/home/codebench/codes/1859/2178/main.py", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:28:31) 
-- CODE:
from numpy import*

m = array(eval(input("")))
acu = 0.0
for i in range(sum(m)):
	for j in range(sum(m)):
		if(i!=j):
			acu+= m[i][j]
print(round(acu, 2)
-- EXECUTION TIME:
0.771152
-- ERROR:
  File "/home/codebench/codes/1859/2178/main.py", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:28:50) 
-- CODE:
from numpy import*

m = array(eval(input("")))
acu = 0.0
for i in range(len(m)):
	for j in range(len(m)):
		if(i!=j):
			acu+= m[i][j]
print(round(acu, 2)
-- EXECUTION TIME:
0.459459
-- ERROR:
  File "/home/codebench/codes/1859/2178/main.py", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:29:19) 
-- CODE:
from numpy import*

m = array(eval(input("")))
acu = 0.0
for i in range(len(m)):
	for j in range(len(m)):
		if(i!=j):
			acu+= m[i][j]
print(round(acu, 2))
-- EXECUTION TIME:
0.940634
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
106.0
---- user output:
106.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
3.06
---- user output:
3.06
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
1048.7
---- user output:
1048.7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
